# engram-peft

./: .agent_memory.template.md  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  README_zh.md  index.html  mkdocs.yml  pyproject.toml  signature.txt
.agents/skills/api-source-tracing/: SKILL.md
.agents/skills/docs-sync/: SKILL.md
.agents/skills/hf-ecosystem-integration/: SKILL.md
.agents/skills/mock-cpu-testing/: SKILL.md
.agents/skills/peft-checkpoint-handling/: SKILL.md
.agents/skills/short-term-memory/: SKILL.md
.agents/skills/tensor-shape-tracker/: SKILL.md
.github/workflows/: deploy_docs.yml  publish.yml
AGENTS/: index.html
CONTRIBUTING/: index.html
README_zh/: index.html
api/: index.html
docs/: README_zh.md  api.md  compare_engram_lora_analysis.md  distributed.md  memory_analysis.md  mkdocs.yml  paper_alignment.md  tutorial.md
docs/api/: index.html
docs/compare_engram_lora_analysis/: index.html
docs/distributed/: index.html
docs/memory_analysis/: index.html
docs/paper_alignment/: index.html
docs/tutorial/: index.html
examples/: README.md  bert_finetune_engram.py  compare_engram_lora.py  compare_engram_lora_bert.py  config.yaml  cross_tokenizer_migration.py  end_to_end.py  end_to_end_cpu.py  engram_knowledge_memory.py  flexible_loading.py  full_finetune_engram.py  gemma4_engram_lora.py  hub_sharing.py  mistral3_engram_lora.py  quantization_example.py  qwen3_engram_lora.py  test_distributed_e2e.py  trl_sft_example.py  visualize_model.py
examples/benchmarks/: data.py  data_utils.py  engine.py  inference.py  methods.py  persistence.py  plotting.py
paper_alignment/: index.html
search/: search_index.json
src/engram_peft/: __init__.py  cli.py  collator.py  compression.py  config.py  config_template.yaml  discovery.py  embedding.py  hashing.py  inference_template.py  layer.py  model.py  protocols.py  saving.py  trainer.py  trl.py  types.py  utils.py  weight_transfer.py
src/engram_peft/utils/: __init__.py  compat.py  config_utils.py  device.py  general.py  peft_patches.py  typing.py
tests/: conftest.py  test_bert_advanced.py  test_bert_support.py  test_collator.py  test_compression.py  test_config.py  test_embedding.py  test_hashing.py  test_layer.py  test_model.py  test_trainer.py  test_utils.py  test_weight_transfer.py
tests/helpers/: cpu_mock.py  mocks.py
tests/integration/: __init__.py  test_architecture_smoke.py  test_collator.py  test_compression.py  test_config_integration.py  test_examples_architecture.py  test_model_discovery.py  test_model_integration.py  test_telemetry.py  test_telemetry_integration.py  test_trainer.py  test_trainer_freeze.py  test_trainer_init.py  test_weight_transfer.py
tests/unit/: __init__.py  telemetry_smoke_test.py  test_cli.py  test_collator.py  test_compat_filtering.py  test_compression.py  test_compression_robustness.py  test_config.py  test_config_utils.py  test_device_backend.py  test_discovery.py  test_distributed.py  test_embedding.py  test_example_distributed_readiness.py  test_example_knowledge_memory.py  test_group_clipping.py  test_hashing.py  test_hub.py  test_layer.py  test_model.py  test_model_robustness.py  test_package_discovery.py  test_peft_patches.py  test_quantization_mock.py  test_qwen3_enhanced_features.py  test_saving_integration.py  test_telemetry.py  test_trainer.py  test_trainer_init.py  test_trainer_robustness.py  test_trainer_utils.py  test_trl_integration.py  test_utils.py  test_weight_transfer.py
tutorial/: index.html
