[project]
name = "engram-peft"
version = "1.1.1"
description = "Engram-PEFT: Efficient Parameter-Efficient Fine-Tuning with Engram"
readme = "README.md"
authors = [
    { name = "QingGo", email = "zyqingjohn@qq.com" }
]
license = "Apache-2.0"
requires-python = ">=3.10, <3.13"
dependencies = [
    "torch>=2.4.0",
    "transformers>=4.45.0",
    "safetensors>=0.4.0",
    "tokenizers>=0.19.0",
    "accelerate>=1.13.0",
    "httpx[socks]>=0.28.1",
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["engram_peft"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true
disable_error_code = ["arg-type"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
# E: pycodestyle errors (PEP 8 规范错误)
# F: Pyflakes logic errors (逻辑错误，如变量未定义)
# I: import sorting (导入排序)
select = ["E", "F", "I"]
# E501: Line too long (行过长, 交由 ruff 处理)
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# F811: Redefinition of unused name (重定义引用的变量 / shadowing)
# F401: Module imported but unused (未使用的导入)
"tests/*" = ["F811", "F401"]

[tool.pyright]
include = ["src"]
exclude = ["tests"]
reportMissingTypeStubs = false
executionEnvironments = [
  { root = "tests", reportArgumentType = "none" }
]

[dependency-groups]
dev = [
    "datasets>=4.8.4",
    "matplotlib>=3.10.8",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mypy>=1.10.0",
    "pandas-stubs>=2.3.3.260113",
    "peft>=0.18.1",
    "pytest-cov>=5.0.0",
    "pytest>=8.0.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "setuptools>=82.0.1",
    "sympy>=1.14.0",
    "torchinfo>=1.8.0",
    "torchview>=0.2.7",
    "torchviz>=0.0.3",
    "types-seaborn>=0.13.2.20260408",
    "pre-commit>=4.5.1",
]
